--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
+  "author": "belopot",
+  "private": false,
+  "homepage": "https://belopot.github.io/bubble-animation-shader/",
   "scripts": {
     "start": "parcel index.html --open",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "^2.2.0",
     "gsap": "2.1.3",
     "three": "0.109.0",
     "three-orbitcontrols": "^2.110.3"
